Migrate from Java 17 to 21
Signed-off-by: Gopal S Akshintala <gopala.akshintala@salesforce.com>